commit translated contents

--- a/articles/hdinsight/hadoop/TOC.yml
+++ b/articles/hdinsight/hadoop/TOC.yml
@@ -14,7 +14,7 @@ items:
   - name: HDInsight 4.0
     href: ../hdinsight-version-release.md
     maintainContext: true
-- name: Snelstartgids
+- name: Snelstartgidsen
   items:
   - name: Een Apache Hadoop-cluster maken - Portal
     href: apache-hadoop-linux-create-cluster-get-started-portal.md
@@ -31,6 +31,17 @@ items:
     maintainContext: true
   - name: Beschikbaarheid van het cluster bewaken met Ambari en Azure Monitor-logboeken
     href: ../hdinsight-cluster-availability.md
+    maintainContext: true
+- name: Voorbeelden
+  items:
+  - name: .NET-voorbeelden
+    href: ../hdinsight-sdk-dotnet-samples.md
+    maintainContext: true
+  - name: Java-voorbeelden
+    href: ../hdinsight-sdk-java-samples.md
+    maintainContext: true
+  - name: Python-voorbeelden
+    href: ../hdinsight-sdk-python-samples.md
     maintainContext: true
 - name: Concepten
   items:
@@ -79,7 +90,7 @@ items:
         href: apache-hadoop-use-hive-curl.md
       - name: Azure PowerShell gebruiken
         href: apache-hadoop-use-hive-powershell.md
-      - name: .NET SDK gebruiken
+      - name: SDK voor .NET gebruiken
         href: apache-hadoop-use-hive-dotnet-sdk.md
     - name: Een Java UDF gebruiken met Hive
       href: apache-hadoop-hive-java-udf.md
@@ -92,7 +103,7 @@ items:
         href: apache-hadoop-use-mapreduce-curl.md
       - name: Azure PowerShell gebruiken
         href: apache-hadoop-use-mapreduce-powershell.md
-      - name: .NET SDK gebruiken
+      - name: SDK voor .NET gebruiken
         href: apache-hadoop-use-mapreduce-dotnet-sdk.md
       - name: De MapReduce-voorbeelden uitvoeren
         href: apache-hadoop-run-samples-linux.md
@@ -103,7 +114,7 @@ items:
         href: apache-hadoop-use-pig-ssh.md
       - name: Azure PowerShell gebruiken
         href: apache-hadoop-use-pig-powershell.md
-      - name: De .NET SDK gebruiken
+      - name: De SDK voor .NET gebruiken
         href: apache-hadoop-use-pig-dotnet-sdk.md
       - name: cURL gebruiken
         href: apache-hadoop-use-pig-curl.md
@@ -252,21 +263,9 @@ items:
       maintainContext: true
   - name: Beheren
     items:
-    - name: Linux-clusters maken
+    - name: HDInsight-clusters maken
       href: ../hdinsight-hadoop-provision-linux-clusters.md
       items:
-      - name: Azure PowerShell gebruiken
-        href: ../hdinsight-hadoop-create-linux-clusters-azure-powershell.md
-        maintainContext: true
-      - name: cURL en de Azure REST API gebruiken
-        href: ../hdinsight-hadoop-create-linux-clusters-curl-rest.md
-        maintainContext: true
-      - name: De .NET SDK gebruiken
-        href: ../hdinsight-hadoop-create-linux-clusters-dotnet-sdk.md
-        maintainContext: true
-      - name: De klassieke versie van Azure CLI gebruiken
-        href: ../hdinsight-hadoop-create-linux-clusters-azure-cli.md
-        maintainContext: true
       - name: Azure Portal gebruiken
         href: ../hdinsight-hadoop-create-linux-clusters-portal.md
         maintainContext: true
@@ -274,13 +273,33 @@ items:
         displayName: resource manager template, arm template, resource manager group
         href: ../hdinsight-hadoop-create-linux-clusters-arm-templates.md
         maintainContext: true
+      - name: SDK voor .NET gebruiken
+        href: https://docs.microsoft.com/dotnet/api/overview/azure/hdinsight?view=azure-dotnet#create-a-cluster
+      - name: SDK voor Python gebruiken
+        href: https://docs.microsoft.com/python/api/overview/azure/hdinsight?view=azure-python#create-a-cluster
+      - name: SDK voor Java gebruiken
+        href: https://docs.microsoft.com/java/api/overview/azure/hdinsight?view=azure-java-stable#create-a-cluster
+      - name: Azure PowerShell gebruiken
+        href: ../hdinsight-hadoop-create-linux-clusters-azure-powershell.md
+        maintainContext: true
+      - name: cURL en de Azure REST API gebruiken
+        href: ../hdinsight-hadoop-create-linux-clusters-curl-rest.md
+        maintainContext: true
+      - name: De klassieke versie van Azure CLI gebruiken
+        href: ../hdinsight-hadoop-create-linux-clusters-azure-cli.md
+        maintainContext: true
       maintainContext: true
-    - name: Apache Hadoop-clusters beheren
+    - name: HDInsight-clusters beheren
       href: ../hdinsight-administer-use-portal-linux.md
       items:
-      - name: .NET SDK gebruiken
-        href: ../hdinsight-administer-use-dotnet-sdk.md
-        maintainContext: true
+      - name: SDK voor .NET gebruiken
+        href: https://docs.microsoft.com/dotnet/api/overview/azure/hdinsight?view=azure-dotnet#management
+      - name: SDK voor Python gebruiken
+        href: https://docs.microsoft.com/python/api/overview/azure/hdinsight?view=azure-python
+      - name: SDK voor Java gebruiken
+        href: https://docs.microsoft.com/java/api/overview/azure/hdinsight?view=azure-java-stable
+      - name: SDK voor Go (preview)
+        href: https://docs.microsoft.com/azure/hdinsight/hdinsight-go-sdk-overview
       - name: Azure PowerShell gebruiken
         href: ../hdinsight-administer-use-powershell.md
         maintainContext: true
@@ -326,7 +345,7 @@ items:
         href: apache-hadoop-use-sqoop-mac-linux.md
       - name: Uitvoeren met cURL
         href: apache-hadoop-use-sqoop-curl.md
-      - name: Uitvoeren met .NET-SDK
+      - name: Uitvoeren met de SDK voor .NET
         href: apache-hadoop-use-sqoop-dotnet-sdk.md
       - name: Uitvoeren met Azure PowerShell
         href: apache-hadoop-use-sqoop-powershell.md
@@ -442,13 +461,13 @@ items:
     href: https://azure.microsoft.com/resources/samples/?service=hdinsight
   - name: Azure PowerShell
     href: /powershell/module/az.hdinsight
-  - name: .NET SDK
+  - name: SDK voor .NET
     href: https://docs.microsoft.com/dotnet/api/overview/azure/hdinsight?view=azure-dotnet
-  - name: Python-SDK
+  - name: SDK voor Python
     href: https://docs.microsoft.com/python/api/overview/azure/hdinsight?view=azure-python
-  - name: Java-SDK
-    href: https://docs.microsoft.com/java/api/overview/azure/hdinsight?view=azure-java-preview
-  - name: Go-SDK
+  - name: SDK voor Java
+    href: https://docs.microsoft.com/java/api/overview/azure/hdinsight?view=azure-java-stable
+  - name: SDK voor Go
     href: ../hdinsight-go-sdk-overview.md
   - name: .NET (Apache HBase)
     href: https://www.nuget.org/packages/Microsoft.HBase.Client/
@@ -481,19 +500,19 @@ items:
   - name: Azure-roadmap
     href: https://azure.microsoft.com/roadmap/?category=intelligence-analytics
   - name: Hulp op het forum
-    href: https://social.msdn.microsoft.com/forums/azure/en-US/home?forum=hdinsight
+    href: https://social.msdn.microsoft.com/forums/azure/home?forum=hdinsight
   - name: Leertraject
     href: https://azure.microsoft.com/documentation/learning-paths/hdinsight-self-guided-hadoop-training/
   - name: Microsoft Professional-programma voor Big Data
-    href: https://academy.microsoft.com/en-us/professional-program/big-data/
+    href: https://academy.microsoft.com/en-us/professional-program/tracks/big-data/
   - name: Prijscalculator
     href: https://azure.microsoft.com/pricing/calculator/
   - name: Windows-hulpprogramma's voor HDInsight
     href: ../hdinsight-hadoop-windows-tools.md
     maintainContext: true
-ms.openlocfilehash: 05766864476553f531900e14a00de14cc65c06f7
-ms.sourcegitcommit: 031e4165a1767c00bb5365ce9b2a189c8b69d4c0
+ms.openlocfilehash: 3a83ed5b9f3a1015c93f14ccb4be5bd2852b146a
+ms.sourcegitcommit: 48a41b4b0bb89a8579fc35aa805cea22e2b9922c
 ms.translationtype: HT
 ms.contentlocale: nl-NL
-ms.lasthandoff: 04/13/2019
-ms.locfileid: "59548202"
+ms.lasthandoff: 04/15/2019
+ms.locfileid: "59578877"
