--- a/articles/hdinsight/spark/TOC.yml
+++ b/articles/hdinsight/spark/TOC.yml
@@ -40,6 +40,17 @@ items:
   - name: Beschikbaarheid van het cluster bewaken met Ambari en Azure Monitor-logboeken
     href: ../hdinsight-cluster-availability.md
     maintainContext: true
+- name: Voorbeelden
+  items:
+  - name: .NET-voorbeelden
+    href: ../hdinsight-sdk-dotnet-samples.md
+    maintainContext: true
+  - name: Java-voorbeelden
+    href: ../hdinsight-sdk-java-samples.md
+    maintainContext: true
+  - name: Python-voorbeelden
+    href: ../hdinsight-sdk-python-samples.md
+    maintainContext: true
 - name: Procedures
   items:
   - name: Clusteropslag gebruiken
@@ -214,45 +225,53 @@ items:
     - name: Planning clustercapaciteit
       href: ../hdinsight-capacity-planning.md
       maintainContext: true
-    - name: Linux-clusters maken
+    - name: HDInsight-clusters maken
       href: ../hdinsight-hadoop-provision-linux-clusters.md
       items:
-      - name: Azure PowerShell gebruiken
-        href: ../hdinsight-hadoop-create-linux-clusters-azure-powershell.md
-        maintainContext: true
-      - name: cURL en de Azure REST API gebruiken
-        href: ../hdinsight-hadoop-create-linux-clusters-curl-rest.md
-        maintainContext: true
-      - name: De .NET SDK gebruiken
-        href: ../hdinsight-hadoop-create-linux-clusters-dotnet-sdk.md
-        maintainContext: true
-      - name: De klassieke versie van Azure CLI gebruiken
-        href: ../hdinsight-hadoop-create-linux-clusters-azure-cli.md
-        maintainContext: true
       - name: Azure Portal gebruiken
         href: ../hdinsight-hadoop-create-linux-clusters-portal.md
         maintainContext: true
       - name: Azure Resource Manager-sjablonen gebruiken
         displayName: resource manager template, arm template, resource manager group
         href: ../hdinsight-hadoop-create-linux-clusters-arm-templates.md
-      maintainContext: true
-    - name: On-demand clusters maken
-      href: ../hdinsight-hadoop-create-linux-clusters-adf.md
+        maintainContext: true
+      - name: SDK voor .NET gebruiken
+        href: https://docs.microsoft.com/dotnet/api/overview/azure/hdinsight?view=azure-dotnet#create-a-cluster
+      - name: SDK voor Python gebruiken
+        href: https://docs.microsoft.com/python/api/overview/azure/hdinsight?view=azure-python#create-a-cluster
+      - name: SDK voor Java gebruiken
+        href: https://docs.microsoft.com/java/api/overview/azure/hdinsight?view=azure-java-stable#create-a-cluster
+      - name: Azure PowerShell gebruiken
+        href: ../hdinsight-hadoop-create-linux-clusters-azure-powershell.md
+        maintainContext: true
+      - name: cURL en de Azure REST API gebruiken
+        href: ../hdinsight-hadoop-create-linux-clusters-curl-rest.md
+        maintainContext: true
+      - name: De klassieke versie van Azure CLI gebruiken
+        href: ../hdinsight-hadoop-create-linux-clusters-azure-cli.md
+        maintainContext: true
+      - name: On-demand clusters maken
+        href: ../hdinsight-hadoop-create-linux-clusters-adf.md
+        maintainContext: true
       maintainContext: true
     - name: HDInsight-clusters beheren
+      href: ../hdinsight-administer-use-portal-linux.md
       items:
-      - name: Portal gebruiken
-        href: ../hdinsight-administer-use-portal-linux.md
-        maintainContext: true
-      - name: .NET SDK gebruiken
-        href: ../hdinsight-administer-use-dotnet-sdk.md
-        maintainContext: true
+      - name: SDK voor .NET gebruiken
+        href: https://docs.microsoft.com/dotnet/api/overview/azure/hdinsight?view=azure-dotnet#management
+      - name: SDK voor Python gebruiken
+        href: https://docs.microsoft.com/python/api/overview/azure/hdinsight?view=azure-python
+      - name: SDK voor Java gebruiken
+        href: https://docs.microsoft.com/java/api/overview/azure/hdinsight?view=azure-java-stable
+      - name: SDK voor Go (preview)
+        href: https://docs.microsoft.com/azure/hdinsight/hdinsight-go-sdk-overview
       - name: Azure PowerShell gebruiken
         href: ../hdinsight-administer-use-powershell.md
         maintainContext: true
       - name: De klassieke versie van Azure CLI gebruiken
         href: ../hdinsight-administer-use-command-line.md
         maintainContext: true
+      maintainContext: true
     - name: Clusters beheren met de Apache Ambari-webinterface
       href: ../hdinsight-hadoop-manage-ambari.md
       items:
@@ -284,7 +303,7 @@ items:
       - name: Uitvoeren met cURL
         href: ../hadoop/apache-hadoop-use-sqoop-curl.md
         maintainContext: true
-      - name: Uitvoeren met .NET-SDK
+      - name: Uitvoeren met de SDK voor .NET
         href: ../hadoop/apache-hadoop-use-sqoop-dotnet-sdk.md
         maintainContext: true
       - name: Uitvoeren met Azure PowerShell
@@ -403,13 +422,13 @@ items:
     href: https://azure.microsoft.com/resources/samples/?service=hdinsight
   - name: Azure PowerShell
     href: /powershell/module/az.hdinsight
-  - name: .NET SDK
+  - name: SDK voor .NET
     href: https://docs.microsoft.com/dotnet/api/overview/azure/hdinsight?view=azure-dotnet
-  - name: Python-SDK
+  - name: SDK voor Python
     href: https://docs.microsoft.com/python/api/overview/azure/hdinsight?view=azure-python
-  - name: Java-SDK
-    href: https://docs.microsoft.com/java/api/overview/azure/hdinsight?view=azure-java-preview
-  - name: Go-SDK
+  - name: SDK voor Java
+    href: https://docs.microsoft.com/java/api/overview/azure/hdinsight?view=azure-java-stable
+  - name: SDK voor Go
     href: ../hdinsight-go-sdk-overview.md
   - name: .NET (Apache HBase)
     href: https://www.nuget.org/packages/Microsoft.HBase.Client/
@@ -432,19 +451,19 @@ items:
   - name: Azure-roadmap
     href: https://azure.microsoft.com/roadmap/?category=intelligence-analytics
   - name: Hulp op het forum
-    href: https://social.msdn.microsoft.com/forums/azure/en-US/home?forum=hdinsight
+    href: https://social.msdn.microsoft.com/forums/azure/home?forum=hdinsight
   - name: Leertraject
     href: https://azure.microsoft.com/documentation/learning-paths/hdinsight-self-guided-hadoop-training/
   - name: Microsoft Professional-programma voor Big Data
-    href: https://academy.microsoft.com/en-us/professional-program/big-data/
+    href: https://academy.microsoft.com/en-us/professional-program/tracks/big-data/
   - name: Prijscalculator
     href: https://azure.microsoft.com/pricing/calculator/
   - name: Windows-hulpprogramma's voor HDInsight
     href: ../hdinsight-hadoop-windows-tools.md
     maintainContext: true
-ms.openlocfilehash: d219c54110d8e2c24823c858f152d3fb6ae874ba
-ms.sourcegitcommit: 031e4165a1767c00bb5365ce9b2a189c8b69d4c0
+ms.openlocfilehash: c345237788f49bd9fc785eeaed5831b89231bff4
+ms.sourcegitcommit: 48a41b4b0bb89a8579fc35aa805cea22e2b9922c
 ms.translationtype: HT
 ms.contentlocale: nl-NL
-ms.lasthandoff: 04/13/2019
-ms.locfileid: "59544149"
+ms.lasthandoff: 04/15/2019
+ms.locfileid: "59578387"
