--- a/articles/data-explorer/toc.yml
+++ b/articles/data-explorer/toc.yml
@@ -95,6 +95,8 @@ items:
       href: connect-from-databricks.md
     - name: Gegevens analyseren met Jupyter Notebooks en Kqlmagic
       href: kqlmagic.md
+    - name: Gegevens kopiëren in Azure Data Factory
+      href: data-factory-load-data.md
     - name: Gegevens visualiseren in Grafana
       href: grafana.md
     - name: Verbinding maken met ODBC
@@ -139,9 +141,9 @@ items:
     href: https://aka.ms/adecostestimator
   - name: Service-updates
     href: https://azure.microsoft.com/updates/?product=data-explorer
-ms.openlocfilehash: 7b525558fd22b2d2f61f3cc901938c449f53fb72
-ms.sourcegitcommit: 04716e13cc2ab69da57d61819da6cd5508f8c422
+ms.openlocfilehash: c582b82f4b4caf0ee3bb007934cc4d50163fe139
+ms.sourcegitcommit: fec96500757e55e7716892ddff9a187f61ae81f7
 ms.translationtype: HT
 ms.contentlocale: nl-NL
-ms.lasthandoff: 04/02/2019
-ms.locfileid: "58847080"
+ms.lasthandoff: 04/16/2019
+ms.locfileid: "59616812"
