--- a/articles/databox-online/TOC.yml
+++ b/articles/databox-online/TOC.yml
@@ -43,7 +43,7 @@ items:
       - name: Via PowerShell
         href: data-box-gateway-connect-powershell-interface.md
     - name: Controleren
-      href: data-box-edge-monitor.md
+      href: data-box-gateway-monitor.md
     - name: Problemen oplossen
       href: data-box-gateway-troubleshoot.md
   - name: Releaseopmerkingen
@@ -96,6 +96,8 @@ items:
       href: data-box-edge-connect-powershell-interface.md
     - name: Problemen oplossen
       href: data-box-edge-troubleshoot.md
+    - name: Controleren
+      href: data-box-edge-monitor.md
   - name: Releaseopmerkingen
     items:
     - name: Algemene beschikbaarheid
@@ -108,9 +110,9 @@ items:
     href: https://azure.microsoft.com/services/storage/databox/edge/
   - name: Prijzen
     href: https://azure.microsoft.com/pricing/details/storage/databox/edge/
-ms.openlocfilehash: aafd361432d17e8a147847b1271ed4b86c6c4cf9
-ms.sourcegitcommit: 48a41b4b0bb89a8579fc35aa805cea22e2b9922c
+ms.openlocfilehash: d72b7b227142ad62c4c87fb8f06ef84ceef57826
+ms.sourcegitcommit: fec96500757e55e7716892ddff9a187f61ae81f7
 ms.translationtype: HT
 ms.contentlocale: nl-NL
-ms.lasthandoff: 04/15/2019
-ms.locfileid: "59578529"
+ms.lasthandoff: 04/16/2019
+ms.locfileid: "59615928"
