--- a/articles/hdinsight/interactive-query/TOC.yml
+++ b/articles/hdinsight/interactive-query/TOC.yml
@@ -248,6 +248,9 @@ items:
     - name: OS-patches voor HDInsight-cluster
       href: ../hdinsight-os-patching.md
       maintainContext: true
+    - name: Hive-workloads migreren naar HDInsight 4.0
+      href: apache-hive-migrate-workloads.md
+      maintainContext: true
   - name: Problemen oplossen
     href: ../hdinsight-troubleshoot-guide.md
     items:
@@ -357,12 +360,15 @@ items:
 - name: Resources
   items:
   - name: Releaseopmerkingen
-    href: ../hdinsight-release-notes.md
     items:
+    - name: Opmerkingen bij de huidige release
+      href: ../hdinsight-release-notes.md
+      maintainContext: true
     - name: Gearchiveerde releaseopmerkingen
       href: ../hdinsight-release-notes-archive.md
       maintainContext: true
-    maintainContext: true
+  - name: Toegang tot wijzigingen van de clusterconfiguratie
+    href: ../hdinsight-migrate-granular-access-cluster-configurations.md
   - name: Azure-roadmap
     href: https://azure.microsoft.com/roadmap/?category=intelligence-analytics
   - name: Hulp op het forum
@@ -376,9 +382,9 @@ items:
   - name: Windows-hulpprogramma's voor HDInsight
     href: ../hdinsight-hadoop-windows-tools.md
     maintainContext: true
-ms.openlocfilehash: 9aac9dcaa0e7a853b3cedf88a7666f789dbf558f
-ms.sourcegitcommit: 48a41b4b0bb89a8579fc35aa805cea22e2b9922c
+ms.openlocfilehash: 2f9952a95da9a47448d54ba5b48be033fb5707cc
+ms.sourcegitcommit: fec96500757e55e7716892ddff9a187f61ae81f7
 ms.translationtype: HT
 ms.contentlocale: nl-NL
-ms.lasthandoff: 04/15/2019
-ms.locfileid: "59579067"
+ms.lasthandoff: 04/16/2019
+ms.locfileid: "59615720"
