commit translated contents

--- a/articles/hdinsight/storm/TOC.yml
+++ b/articles/hdinsight/storm/TOC.yml
@@ -288,9 +288,11 @@ items:
   - name: Windows-hulpprogramma's voor HDInsight
     href: ../hdinsight-hadoop-windows-tools.md
     maintainContext: true
-ms.openlocfilehash: c3cb2f274c2d2cbd76cffb31cf0421093eea232f
-ms.sourcegitcommit: 48a41b4b0bb89a8579fc35aa805cea22e2b9922c
+  - name: Toegang tot wijzigingen van de clusterconfiguratie
+    href: ../hdinsight-migrate-granular-access-cluster-configurations.md
+ms.openlocfilehash: 760f7c94a101d7c4a8374d3a0b256da3af35bd8b
+ms.sourcegitcommit: 5f348bf7d6cf8e074576c73055e17d7036982ddb
 ms.translationtype: HT
 ms.contentlocale: nl-NL
-ms.lasthandoff: 04/15/2019
-ms.locfileid: "59578370"
+ms.lasthandoff: 04/16/2019
+ms.locfileid: "59607503"
