--- a/articles/hdinsight/hbase/TOC.yml
+++ b/articles/hdinsight/hbase/TOC.yml
@@ -299,12 +299,15 @@ items:
 - name: Resources
   items:
   - name: Releaseopmerkingen
-    href: ../hdinsight-release-notes.md
     items:
+    - name: Opmerkingen bij de huidige release
+      href: ../hdinsight-release-notes.md
+      maintainContext: true
     - name: Gearchiveerde releaseopmerkingen
       href: ../hdinsight-release-notes-archive.md
       maintainContext: true
-    maintainContext: true
+  - name: Toegang tot wijzigingen van de clusterconfiguratie
+    href: ../hdinsight-migrate-granular-access-cluster-configurations.md
   - name: Azure-roadmap
     href: https://azure.microsoft.com/roadmap/?category=intelligence-analytics
   - name: Hulp op het forum
@@ -318,9 +321,9 @@ items:
   - name: Windows-hulpprogramma's voor HDInsight
     href: ../hdinsight-hadoop-windows-tools.md
     maintainContext: true
-ms.openlocfilehash: 286fd982c110e71b8e9bb454a6ad6a3068f8a4bf
-ms.sourcegitcommit: 48a41b4b0bb89a8579fc35aa805cea22e2b9922c
+ms.openlocfilehash: 09d43f60cc42d8c6ed5a1a234bd618c0583cdf8d
+ms.sourcegitcommit: fec96500757e55e7716892ddff9a187f61ae81f7
 ms.translationtype: HT
 ms.contentlocale: nl-NL
-ms.lasthandoff: 04/15/2019
-ms.locfileid: "59578965"
+ms.lasthandoff: 04/16/2019
+ms.locfileid: "59615962"
