--- a/articles/active-directory/governance/index.yml
+++ b/articles/active-directory/governance/index.yml
@@ -45,4 +45,4 @@ sections:
       - type: list
         style: unordered
         items:
-          - html: <a href="/azure/active-directory/conditional-access/terms-of-use">Wat kan ik doen met Gebruiksrechtovereenkomst?</a>
+          - html: <a href="/azure/active-directory/conditional-access/terms-of-use">Wat kan ik doen met Gebruiksvoorwaarden?</a>
