--- a/articles/azure-resource-manager/index.yml
+++ b/articles/azure-resource-manager/index.yml
@@ -60,7 +60,7 @@ sections:
         style: unordered
         className: spaced noBullet
         items:
-          - html: '<a href="https://azure.microsoft.com/resources/templates/">Azure-quickstartsjablonen</a>'
+          - html: '<a href="https://azure.microsoft.com/resources/templates/">Azure-snelstartsjablonen</a>'
           - html: '<a href="https://resources.azure.com/">Azure Resource Explorer (preview)</a>'
   - title: Naslaginformatie
     items:
@@ -75,4 +75,4 @@ sections:
           - title: Talen
             html: <p><a href="/dotnet/api/microsoft.azure.management.resourcemanager">.NET</a></p><p><a href="/java/api/com.microsoft.azure.management.resources">Java</a></p><p><a href="/python/api/overview/azure/resources?view=azure-python">Python</a></p>
           - title: REST
-            html: <p><a href="/rest/api/resources/">REST-API</a></p>
+            html: <p><a href="/rest/api/resources/">REST API</a></p>
