--- a/articles/cognitive-services/Speech-Service/index.yml
+++ b/articles/cognitive-services/Speech-Service/index.yml
@@ -222,8 +222,8 @@ sections:
       - type: list
         style: unordered
         items:
-          - html: '<a href="https://github.com/Azure-Samples/cognitive-services-speech-sdk">Voorbeelden van service-SDK''s</a><br/>'
-          - html: '<a href="https://github.com/Azure-Samples/Cognitive-Services-Speech-Devices-SDK">Voorbeelden van apparaat-SDK''s</a><br/>'
+          - html: '<a href="https://github.com/Azure-Samples/cognitive-services-speech-sdk">Voorbeelden van Service-SDK’s</a><br/>'
+          - html: '<a href="https://github.com/Azure-Samples/Cognitive-Services-Speech-Devices-SDK">Voorbeelden van Apparaat-SDK’s</a><br/>'
   - title: Naslaginformatie
     items:
       - type: list
@@ -237,10 +237,10 @@ sections:
               <p><a href="https://aka.ms/csspeech/javaref">Java-API</a></p>
               <p><a href="https://aka.ms/csspeech/pythonref">Python-API</a></p>
               <p><a href="https://aka.ms/csspeech/objectivecref">Objective-C-API</a></p>
-              <p><a href="https://aka.ms/csspeech/javascriptref">JavaScript API</a></p>
+              <p><a href="https://aka.ms/csspeech/javascriptref">JavaScript-API</a></p>
           - title: REST-API
             html: |
-              <p><a href="https://docs.microsoft.com/azure/cognitive-services/speech-service/rest-apis">REST-API</a></p>
+              <p><a href="https://docs.microsoft.com/azure/cognitive-services/speech-service/rest-apis">REST API</a></p>
           - title: PowerShell
             html: |
               <p><a href=https://docs.microsoft.com/powershell/module/az.cognitiveservices/#cognitive_services">Azure PowerShell</a></p>
