--- a/articles/governance/blueprints/toc.yml
+++ b/articles/governance/blueprints/toc.yml
@@ -1,120 +1,113 @@
-items:
 - name: Documentatie over Azure Blueprints
   href: index.yml
 - name: Overzicht
-  items:
-  - name: Overzicht van Azure Blueprints
-    displayName: templates, policy, definition, assignment, rbac
-    href: overview.md
   expanded: true
+  items:
+    - name: Overzicht van Azure Blueprints
+      displayName: 'templates, policy, definition, assignment, rbac'
+      href: overview.md
 - name: Snelstartgidsen
-  items:
-  - name: Een blauwdruk maken - Portal
-    displayName: publish, assign, track, unassign, delete
-    href: create-blueprint-portal.md
-  - name: Een blauwdruk maken - REST API
-    displayName: publish, assign, track, unassign, delete
-    href: create-blueprint-rest-api.md
   expanded: true
+  items:
+    - name: Een blauwdruk maken - Portal
+      displayName: 'publish, assign, track, unassign, delete'
+      href: create-blueprint-portal.md
+    - name: Een blauwdruk maken - REST API
+      displayName: 'publish, assign, track, unassign, delete'
+      href: create-blueprint-rest-api.md
 - name: Zelfstudies
-  items:
-  - name: Maken op basis van een voorbeeldblauwdruk
-    displayName: template, resource group, rbac, role assignment
-    href: ./tutorials/create-from-sample.md
-  - name: Nieuwe resources beveiligen met resourcevergrendelingen op basis van een blauwdruk
-    displayName: read only, do not delete, lock assignment
-    href: ./tutorials/protect-new-resources.md
   expanded: true
+  items:
+    - name: Maken op basis van een voorbeeldblauwdruk
+      displayName: 'template, resource group, rbac, role assignment'
+      href: ./tutorials/create-from-sample.md
+    - name: Nieuwe resources beveiligen met resourcevergrendelingen op basis van een blauwdruk
+      displayName: 'read only, do not delete, lock assignment'
+      href: ./tutorials/protect-new-resources.md
 - name: Voorbeelden
-  items:
-  - name: Index
-    displayName: list, examples
-    href: ./samples/index.md
-  - name: ISO 27001 - gedeelde services
-    items:
-    - name: Overzicht
-      displayName: standards, iso, 27001, shared services
-      href: ./samples/iso27001-shared/index.md
-    - name: Toewijzing van beheeropties
-      displayName: standards, iso, 27001
-      href: ./samples/iso27001-shared/control-mapping.md
-    - name: Implementatiestappen
-      displayName: standards, iso, 27001
-      href: ./samples/iso27001-shared/deploy.md
-  - name: 'ISO 27001: ASE/SQL-werkbelasting'
-    items:
-    - name: Overzicht
-      displayName: standards, iso, 27001, shared services
-      href: ./samples/iso27001-ase-sql-workload/index.md
-    - name: Toewijzing van beheeropties
-      displayName: standards, iso, 27001
-      href: ./samples/iso27001-ase-sql-workload/control-mapping.md
-    - name: Implementatiestappen
-      displayName: standards, iso, 27001
-      href: ./samples/iso27001-ase-sql-workload/deploy.md
   expanded: true
+  items:
+    - name: Index
+      displayName: 'list, examples'
+      href: ./samples/index.md
+    - name: ISO 27001 - gedeelde services
+      items:
+        - name: Overzicht
+          displayName: 'standards, iso, 27001, shared services'
+          href: ./samples/iso27001-shared/index.md
+        - name: Toewijzing van beheeropties
+          displayName: 'standards, iso, 27001'
+          href: ./samples/iso27001-shared/control-mapping.md
+        - name: Implementatiestappen
+          displayName: 'standards, iso, 27001'
+          href: ./samples/iso27001-shared/deploy.md
+    - name: 'ISO 27001: ASE/SQL-werkbelasting'
+      items:
+        - name: Overzicht
+          displayName: 'standards, iso, 27001, shared services'
+          href: ./samples/iso27001-ase-sql-workload/index.md
+        - name: Toewijzing van beheeropties
+          displayName: 'standards, iso, 27001'
+          href: ./samples/iso27001-ase-sql-workload/control-mapping.md
+        - name: Implementatiestappen
+          displayName: 'standards, iso, 27001'
+          href: ./samples/iso27001-ase-sql-workload/deploy.md
 - name: Concepten
-  items:
-  - name: Levenscyclus van een blauwdruk
-    displayName: publish, edit, delete, assignments
-    href: ./concepts/lifecycle.md
-  - name: Stappen in een blauwdrukimplementatie
-    displayName: assign, managed identity
-    href: ./concepts/deployment-stages.md
-  - name: Dynamische parameters in een blauwdruk
-    displayName: secureString, secureObject, static
-    href: ./concepts/parameters.md
-  - name: Sequentievolgorde voor implementatie van blauwdrukken
-    displayName: customize
-    href: ./concepts/sequencing-order.md
-  - name: Resourcevergrendeling in Blueprints
-    displayName: mode, state, read only, edit, denyAssignments
-    href: ./concepts/resource-locking.md
   expanded: true
+  items:
+    - name: Levenscyclus van een blauwdruk
+      displayName: 'publish, edit, delete, assignments'
+      href: ./concepts/lifecycle.md
+    - name: Stappen in een blauwdrukimplementatie
+      displayName: 'assign, managed identity'
+      href: ./concepts/deployment-stages.md
+    - name: Dynamische parameters in een blauwdruk
+      displayName: 'secureString, secureObject, static'
+      href: ./concepts/parameters.md
+    - name: Sequentievolgorde voor implementatie van blauwdrukken
+      displayName: customize
+      href: ./concepts/sequencing-order.md
+    - name: Resourcevergrendeling in Blueprints
+      displayName: 'mode, state, read only, edit, denyAssignments'
+      href: ./concepts/resource-locking.md
 - name: Handleidingen
-  items:
-  - name: Toewijzingen beheren met PowerShell
-    displayName: create, update, remove
-    href: ./how-to/manage-assignments-ps.md
-  - name: Bestaande toewijzingen bijwerken vanuit de portal
-    displayName: lock, errors
-    href: ./how-to/update-existing-assignments.md
-  - name: Blauwdrukken beheren als Code (community)
-    href: https://github.com/Azure/azure-blueprints/blob/master/README.md
   expanded: true
+  items:
+    - name: Toewijzingen beheren met PowerShell
+      displayName: 'create, update, remove'
+      href: ./how-to/manage-assignments-ps.md
+    - name: Bestaande toewijzingen bijwerken vanuit de portal
+      displayName: 'lock, errors'
+      href: ./how-to/update-existing-assignments.md
+    - name: Blauwdrukken beheren als Code (community)
+      href: 'https://github.com/Azure/azure-blueprints/blob/master/README.md'
 - name: Problemen oplossen
-  displayName: errors, violation
+  displayName: 'errors, violation'
   href: ./troubleshoot/general.md
 - name: Verwijzingen
-  items:
-  - name: Azure PowerShell
-    href: /powershell/module/az.blueprint/#blueprint
-  - name: Azure-SDK voor .NET
-    href: /dotnet/api/overview/azure/blueprints/management
-  - name: REST
-    href: /rest/api/blueprints/
-  - name: PSGallery (Az.Blueprint-module)
-    href: https://www.powershellgallery.com/packages/Az.Blueprint
-  - name: PSGallery (community-module)
-    href: https://www.powershellgallery.com/packages/Manage-AzureRMBlueprint
   expanded: true
+  items:
+    - name: Azure PowerShell
+      href: '/powershell/module/az.blueprint/#blueprint'
+    - name: Azure-SDK voor .NET
+      href: /dotnet/api/overview/azure/blueprints/management
+    - name: REST
+      href: /rest/api/blueprints/
+    - name: PSGallery (Az.Blueprint-module)
+      href: 'https://www.powershellgallery.com/packages/Az.Blueprint'
+    - name: PSGallery (community-module)
+      href: 'https://www.powershellgallery.com/packages/Manage-AzureRMBlueprint'
 - name: Resources
   items:
-  - name: GitHub - Azure Blueprints-voorbeelden
-    href: https://github.com/Azure/azure-blueprints
-  - name: Azure-roadmap
-    href: https://azure.microsoft.com/roadmap/
-  - name: Prijscalculator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: UserVoice
-    href: https://feedback.azure.com/forums/915958-azure-governance
-  - name: YouTube-kanaal Governance
-    href: https://www.youtube.com/channel/UCZZ3-oMrVI5ssheMzaWC4uQ
-  - name: Azure Friday - Overzicht van Azure Blueprints
-    href: https://channel9.msdn.com/Shows/Azure-Friday/An-overview-of-Azure-Blueprints
-ms.openlocfilehash: f55ec759cac8ace468bc4216a30aef765f9d213a
-ms.sourcegitcommit: 43b85f28abcacf30c59ae64725eecaa3b7eb561a
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 04/09/2019
-ms.locfileid: "59358577"
+    - name: GitHub - Azure Blueprints-voorbeelden
+      href: 'https://github.com/Azure/azure-blueprints'
+    - name: Azure-roadmap
+      href: 'https://azure.microsoft.com/roadmap/'
+    - name: Prijscalculator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: UserVoice
+      href: 'https://feedback.azure.com/forums/915958-azure-governance'
+    - name: YouTube-kanaal Governance
+      href: 'https://www.youtube.com/channel/UCZZ3-oMrVI5ssheMzaWC4uQ'
+    - name: Azure Friday - Overzicht van Azure Blueprints
+      href: 'https://channel9.msdn.com/Shows/Azure-Friday/An-overview-of-Azure-Blueprints'
